syntax = "proto3";

package cheers.media.v1;

import "google/api/annotations.proto";

option java_multiple_files = true;
option go_package = "github.com/salazarhugo/cheers1/gen/go/cheers/media/v1;media";

service MediaService {
  rpc UploadMedia (UploadMediaRequest) returns (UploadMediaResponse) {
    option (google.api.http) = {
      post: "/v1/media"
      body: "*"
    };
  }
}

message UploadMediaRequest {
  bytes chunk = 1;
  int64 upload_id = 2;
  enum MediaType {
    NONE = 0;
    POST = 1;
    AVATAR = 2;
    BANNER = 3;
    PARTY = 4;
    CHAT = 5;
  }
  MediaType media_type = 3;
  int64 upload_media_width = 4;
  int64 upload_media_height = 5;
}

message UploadMediaResponse {
  Media media = 1;
}

message Media {
  string id = 1;
  string url = 2;
  string ref = 3;
  string type = 4;
}
